Fix text not showing problem in waive printing

--- a/ca/src/Pages/Students/Graduation/index.css
+++ b/ca/src/Pages/Students/Graduation/index.css
@@ -8,7 +8,8 @@
     /* Set body padding to header and footer */
     body{
         background: #fff !important;
-        padding: 40px 0;;
+        padding: 40px 0;
+        font-family: "新細明體", "PMingLiU", "微軟正黑體", "Microsoft JhengHei", "細明體", "MingLiU", "標楷體", "DFKai-sb", serif;
     }
     .showArea,
     footer {
@@ -28,5 +29,7 @@
         text-size-adjust: 100%;
         -webkit-text-size-adjust: 100%;
     }
-
+    .react-snow-effect-canvas {
+        display: none;
+    }
 }
